change the jobList from Job[][] to List<List<Job>>